[ACPI] change hard-coded IO width to programmable width 	http://bugzilla.kernel.org/show_bug.cgi?id=1349 	from David Shaohua Li and Venatesh Pallipadi